--- a/css/6_exception.css
+++ b/css/6_exception.css
@@ -132,6 +132,13 @@
         0 1px 2px 0 rgb(0 0 0 / 0.05),
         inset 0 1px 0 0 light-dark(rgb(255 255 255 / 0.5), rgb(255 255 255 / 0.05));
     }
+    &[var="res"] {
+      resize: horizontal;
+      overflow: auto;
+      border: 1px dashed var(--gry-6);
+      min-width: 250px;
+      max-width: 100%;
+    }
   }
 
   /* === INPUT VALIDATION STATES === */
