in progress: layout

--- a/partials/nav.html
+++ b/partials/nav.html
@@ -7,7 +7,7 @@
 </nav>
 
 <dialog id="nav-drawer" class="drawer:left mobile" popover="manual">
-  <div class="drawer-content">
+  <div class="drawer-content flex:stack gap:sm">
     <div class="drawer-header">
       <h3>Navigation</h3>
       <button class="close-btn" popovertarget="nav-drawer">Close</button>
